<resources>
    <string name="app_name">Mercci</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="subBar">COMPLEMENTS</string>

    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="subtitle">Si no posee una cuenta, lo invitamos a</string>

    <string name="inicio">Inicio</string>
    <string name="nueva_coleccion">Nueva Colección</string>
    <string name="bolsos">Bolsos</string>
    <string name="carteras">Carteras</string>
    <string name="cinturones">Cinturones</string>
    <string name="nosotros">Nosotros</string>
    <string name="promociones">Promociones</string>
    <string name="promocionesdescuentos">Promociones y Descuentos</string>
    <string name="redes_sociales">Redes Sociales</string>
    <string name="mensajes">Mensajes</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="siguenos">Siguenos en Instagram</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registro">¡Registrarse!</string>
    <string name="hola">¡Bienvenido a Mercci!</string>

    <string name="registrar">¡Registrarte aqui!</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="direccion">Direccion</string>
    <string name="celular">Celular</string>
    <string name="contrasenaa">Repetir Contraseña</string>

    <string name="emptytext">No puede haber campo vacíos en los datos solicitados.</string>
    <string name="passdifer">Las contraseñas ingresadas son diferentes.</string>
    <string name="success">Has sido registrado correctamente, te invitamos a iniciar sesion.</string>


    <string name="prox">Proximamente...</string>

    <string name="web">https://mercci.wixsite.com/misitio</string>
    <string name="face">https://www.facebook.com/Mercci-1798419160250913</string>
    <string name="email">mercci.complement@gmail.com</string>
    <string name="ig">https://www.instagram.com/mercci.complements</string>

    <string-array name="titleMains">
        <item>NUEVA COLECCIÓN</item>
        <item>DESCUENTOS EXCLUSIVOS</item>
        <item>SIGUENOS EN INSTAGRAM</item>
    </string-array>

    <string name="txtMision">Misión</string>
    <string name="txtTextMision">MERCCI es una marca dedicada al diseño, producción y comercialización de productos de marroquinería como bolsos, carteras y cinturones, dirigido a un público femenino   vanguardista y elegante, se caracteriza por tener un talento humano especializado, enfocado en ofrecer la más alta calidad, generando productos exclusivos que van de la mano con las nuevas tendencias</string>
    <string name="txtVision">Visión</string>
    <string name="txtTextVision">Contar con puntos de ventas directos en la ciudad de Barranquilla, Será una marca con posicionamiento y prestigio en el mercado colombiano, reconocida por sus productos innovadores, con calidad y diseño.</string>

    <string-array name="titleBolsos">
        <item>Bolso Naus</item>
        <item>Bolso Polim</item>
    </string-array>
    <string-array name="subBolsos">
        <item>$251.000,00 COP</item>
        <item>$81.000,00 COP</item>
    </string-array>

    <string-array name="titleCarteras">
        <item>Cartera Naus</item>
        <item>Cartera Polim</item>
    </string-array>
    <string-array name="subCarteras">
        <item>$151.000,00 COP</item>
        <item>$62.000,00 COP</item>
    </string-array>

    <string-array name="titleCinturon">
        <item>Cinturon  Naus</item>
        <item>Cinturon  Polim</item>
    </string-array>
    <string-array name="subTCinturon">
        <item>Azul Turqui</item>
        <item>Plateado</item>
    </string-array>
    <string-array name="subCinturon">
        <item>$61.000,00 COP</item>
        <item>$30.000,00 COP</item>
    </string-array>

    <string name="descripcion">DESCRIPCION</string>
    <string name="color">COLOR:</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="_1">1</string>
    <string name="plus">PLUS</string>
    <string name="minus">MINUS</string>

    <string name="combinado">COMBINADO</string>
    <string name="descripBolsosNaus">Esta colección está dedicada a las mujeres arriesgadas , gracias a su personalidad y carácter innovador, las combinaciones tricolores y los detalles modernos en el diseño de este bolso lo hace la elección acertada, su tamaño es de  30X44 , los materiales son sintéticos , vistas de cremallera con cremallera de cobre , bolsillo interino picado.</string>
    <string name="descripBolsoPolim">Esta colección está dedicada a las mujeres arriesgadas , gracias a su personalidad y carácter innovador, las combinaciones tricolores y los detalles modernos en el diseño de este bolso lo hace la elección acertada, su tamaño es de  32 X44 , los materiales son sintéticos , vistas de cremallera con cremallera de cobre , bolsillo interino picado.</string>
    <string name="descripCarteraNaus">Esta colección está dedicada a las mujeres arriesgadas , gracias a su personalidad y carácter innovador, las combinaciones tricolores y los detalles modernos en el diseño de esta cartera la hace la elección acertada, su tamaño es de  22 X 27 , hecho totalmente en cuero  , con dos cuadrantes circulares de zamak , una hebilla de zamak en la bandolera  , broche de imán dorado en la tapa, vistas de cremallera, bolsillo interino picado.</string>
    <string name="descripCarteraPolim">Esta colección está dedicada a las mujeres arriesgadas , gracias a su personalidad y carácter innovador, las combinaciones tricolores y los detalles modernos en el diseño de esta cartera la hace la elección acertada, su tamaño es de  21 X27 , los materiales son sintéticos , con dos cuadrantes circulares de zamak , cadena de fantasía dorada , broche de imán dorado en la tapa , vistas de cremallera, bolsillo interino picado.</string>
    <string name="descripCinturonAzul">Esta colección está dedicada a las mujeres arriesgadas , gracias a su personalidad y carácter innovador, se diseño este cinturón  en cuero color azul tuqui con un tamaño de 2 cm x 105 cm que tiene una hebilla dorada de zamak. </string>
    <string name="descripCinturonBlanco">Esta colección está dedicada a las mujeres arriesgadas , gracias a su personalidad y carácter innovador, se diseño este cinturón en material sintetico color plata con un tamaño de 2 cm x 105 cm que tiene una hebilla dorada de fantasía.</string>


    <string name="carrito_de_compras">CARRITO DE COMPRAS</string>
    <string name="a_calcular">A Calcular</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="escoger_mas_productos">Escoger Mas Productos</string>
    <string name="total">TOTAL:</string>
    <string name="valor_envio">VALOR ENVIO:</string>
</resources>
