<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registrar">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/registrar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/centaur"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/centaur"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editDire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/centaur"
        android:hint="@string/direccion"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editCel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/centaur"
        android:hint="@string/celular"
        android:inputType="phone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/editCon1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/centaur"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editCon2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/centaur"
        android:hint="@string/contrasenaa"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/centaur"
        android:text="@string/registro"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>