<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".FragmentNosotros">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nosotros"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorPrimary" />


            <ImageView
                android:id="@+id/imgUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/logom" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opificio"
                android:gravity="center"
                android:paddingTop="10dp"
                android:shadowColor="@color/cardview_dark_background"
                android:text="@string/txtMision"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opificio"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/txtTextMision"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opificio"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/txtVision"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opificio"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/txtTextVision"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>